[gd_scene load_steps=10 format=3 uid="uid://bsuv0xtq1n0bh"]

[ext_resource type="FontFile" uid="uid://dtg8qxe14m8ef" path="res://Assets/Fonts/argentum-sans.medium.ttf" id="1_ntrfi"]
[ext_resource type="Script" uid="uid://bgyuw6dxrhjwx" path="res://Popups/soil_meter_values_modal.gd" id="1_t8ag6"]
[ext_resource type="FontFile" uid="uid://b5ofmvuwbvdxo" path="res://Assets/Fonts/argentum-sans.black.ttf" id="2_3q04a"]
[ext_resource type="FontFile" uid="uid://d1hefddkwf7sl" path="res://Assets/Fonts/argentum-sans.vf-regular.ttf" id="2_r223u"]
[ext_resource type="StyleBox" uid="uid://dr025og5g28m0" path="res://Assets/StyleRes/auth_screen.tres" id="2_vo87h"]
[ext_resource type="Texture2D" uid="uid://boo5l23scoya1" path="res://Assets/Icons/back_icon.png" id="5_8ieqn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2h8fa"]
bg_color = Color(1, 1, 1, 1)
shadow_color = Color(0, 0, 0, 0.270588)
shadow_size = 15
shadow_offset = Vector2(0, 5)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vo87h"]
bg_color = Color(0.913725, 0.913725, 0.913725, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.0784314, 0.592157, 0.270588, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r223u"]
content_margin_left = 10.0
bg_color = Color(0.913725, 0.913725, 0.913725, 1)
border_color = Color(0.0784314, 0.592157, 0.270588, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="SoilMeterValuesModal" type="Control"]
custom_minimum_size = Vector2(540, 960)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t8ag6")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
custom_minimum_size = Vector2(540, 960)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_2h8fa")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -204.0
offset_top = -822.0
offset_right = 204.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 10

[node name="Label9" type="Label" parent="Panel/VBoxContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 60)
layout_mode = 2
theme_override_colors/font_color = Color(0.133196, 0.133196, 0.133196, 1)
theme_override_fonts/font = ExtResource("2_3q04a")
theme_override_font_sizes/font_size = 30
text = "Soil Sensor Values"
horizontal_alignment = 1

[node name="Label" type="Label" parent="Panel/VBoxContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
theme_override_colors/font_color = Color(0.548963, 0.548963, 0.548962, 1)
theme_override_fonts/font = ExtResource("1_ntrfi")
theme_override_font_sizes/font_size = 20
text = "Crop Type"

[node name="CropTypeLine" type="LineEdit" parent="Panel/VBoxContainer/Panel/VBoxContainer" groups=["MeterValuesLine"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_colors/clear_button_color_pressed = Color(0.133333, 0.133333, 0.133333, 1)
theme_override_colors/caret_color = Color(0, 0, 0, 1)
theme_override_colors/font_placeholder_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 28
theme_override_styles/focus = SubResource("StyleBoxFlat_vo87h")
theme_override_styles/normal = SubResource("StyleBoxFlat_r223u")

[node name="Label8" type="Label" parent="Panel/VBoxContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
theme_override_colors/font_color = Color(0.548963, 0.548963, 0.548962, 1)
theme_override_fonts/font = ExtResource("1_ntrfi")
theme_override_font_sizes/font_size = 20
text = "Fertility - us/cm"

[node name="FertilityLine" type="LineEdit" parent="Panel/VBoxContainer/Panel/VBoxContainer" groups=["MeterValuesLine"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_colors/clear_button_color_pressed = Color(0.133333, 0.133333, 0.133333, 1)
theme_override_colors/caret_color = Color(0, 0, 0, 1)
theme_override_colors/font_placeholder_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 28
theme_override_styles/focus = SubResource("StyleBoxFlat_vo87h")
theme_override_styles/normal = SubResource("StyleBoxFlat_r223u")

[node name="Label2" type="Label" parent="Panel/VBoxContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
theme_override_colors/font_color = Color(0.548963, 0.548963, 0.548962, 1)
theme_override_fonts/font = ExtResource("1_ntrfi")
theme_override_font_sizes/font_size = 20
text = "Moisture - %"

[node name="MoistureLine" type="LineEdit" parent="Panel/VBoxContainer/Panel/VBoxContainer" groups=["MeterValuesLine"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_colors/clear_button_color_pressed = Color(0.133333, 0.133333, 0.133333, 1)
theme_override_colors/caret_color = Color(0, 0, 0, 1)
theme_override_colors/font_placeholder_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 28
theme_override_styles/focus = SubResource("StyleBoxFlat_vo87h")
theme_override_styles/normal = SubResource("StyleBoxFlat_r223u")

[node name="Label3" type="Label" parent="Panel/VBoxContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
theme_override_colors/font_color = Color(0.548963, 0.548963, 0.548962, 1)
theme_override_fonts/font = ExtResource("1_ntrfi")
theme_override_font_sizes/font_size = 20
text = "PH"

[node name="PHLine" type="LineEdit" parent="Panel/VBoxContainer/Panel/VBoxContainer" groups=["MeterValuesLine"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_colors/clear_button_color_pressed = Color(0.133333, 0.133333, 0.133333, 1)
theme_override_colors/font_placeholder_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 28
theme_override_styles/focus = SubResource("StyleBoxFlat_vo87h")
theme_override_styles/normal = SubResource("StyleBoxFlat_r223u")

[node name="Label4" type="Label" parent="Panel/VBoxContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
theme_override_colors/font_color = Color(0.548963, 0.548963, 0.548962, 1)
theme_override_fonts/font = ExtResource("1_ntrfi")
theme_override_font_sizes/font_size = 20
text = "Temp - Celsius"

[node name="TemperatureLine" type="LineEdit" parent="Panel/VBoxContainer/Panel/VBoxContainer" groups=["MeterValuesLine"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_colors/clear_button_color_pressed = Color(0.133333, 0.133333, 0.133333, 1)
theme_override_colors/caret_color = Color(0, 0, 0, 1)
theme_override_colors/font_placeholder_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 28
theme_override_styles/focus = SubResource("StyleBoxFlat_vo87h")
theme_override_styles/normal = SubResource("StyleBoxFlat_r223u")

[node name="Label5" type="Label" parent="Panel/VBoxContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
theme_override_colors/font_color = Color(0.548963, 0.548963, 0.548962, 1)
theme_override_fonts/font = ExtResource("1_ntrfi")
theme_override_font_sizes/font_size = 20
text = "Sunlight - Lux"

[node name="SunlightLine" type="LineEdit" parent="Panel/VBoxContainer/Panel/VBoxContainer" groups=["MeterValuesLine"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_colors/clear_button_color_pressed = Color(0.133333, 0.133333, 0.133333, 1)
theme_override_colors/caret_color = Color(0, 0, 0, 1)
theme_override_colors/font_placeholder_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 28
theme_override_styles/focus = SubResource("StyleBoxFlat_vo87h")
theme_override_styles/normal = SubResource("StyleBoxFlat_r223u")

[node name="Label6" type="Label" parent="Panel/VBoxContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
theme_override_colors/font_color = Color(0.548963, 0.548963, 0.548962, 1)
theme_override_fonts/font = ExtResource("1_ntrfi")
theme_override_font_sizes/font_size = 20
text = "Humidity - %"

[node name="HumidityLine" type="LineEdit" parent="Panel/VBoxContainer/Panel/VBoxContainer" groups=["MeterValuesLine"]]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_colors/clear_button_color_pressed = Color(0.133333, 0.133333, 0.133333, 1)
theme_override_colors/caret_color = Color(0, 0, 0, 1)
theme_override_colors/font_placeholder_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 28
theme_override_styles/focus = SubResource("StyleBoxFlat_vo87h")
theme_override_styles/normal = SubResource("StyleBoxFlat_r223u")

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/Panel/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 36)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.133196, 0.133196, 0.133196, 1)
theme_override_fonts/font = ExtResource("2_r223u")
theme_override_font_sizes/font_size = 20
text = "Please make sure the values are accurate"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/VBoxContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 5)
layout_mode = 2

[node name="SubmitButton" type="Button" parent="Panel/VBoxContainer/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("1_ntrfi")
theme_override_font_sizes/font_size = 28
theme_override_styles/focus = ExtResource("2_vo87h")
theme_override_styles/hover = ExtResource("2_vo87h")
theme_override_styles/pressed = ExtResource("2_vo87h")
theme_override_styles/normal = ExtResource("2_vo87h")
text = "SUBMIT"

[node name="Label7" type="Label" parent="Panel/VBoxContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.133196, 0.133196, 0.133196, 1)
theme_override_fonts/font = ExtResource("2_r223u")
theme_override_font_sizes/font_size = 25
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/Panel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 1.0
offset_top = 7.0
offset_bottom = 92.0
grow_horizontal = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/Panel/HBoxContainer"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2

[node name="BackButton" type="TextureButton" parent="Panel/VBoxContainer/Panel"]
unique_name_in_owner = true
custom_minimum_size = Vector2(70, 0)
layout_mode = 0
offset_left = 19.0
offset_top = 25.0
offset_right = 89.0
offset_bottom = 110.0
texture_normal = ExtResource("5_8ieqn")
ignore_texture_size = true
stretch_mode = 4
metadata/_edit_use_anchors_ = true

[connection signal="gui_input" from="Panel" to="." method="_on_panel_gui_input"]
[connection signal="text_changed" from="Panel/VBoxContainer/Panel/VBoxContainer/CropTypeLine" to="." method="_on_croptype_line_text_changed"]
[connection signal="text_changed" from="Panel/VBoxContainer/Panel/VBoxContainer/FertilityLine" to="." method="_on_fertility_line_text_changed"]
[connection signal="text_changed" from="Panel/VBoxContainer/Panel/VBoxContainer/MoistureLine" to="." method="_on_moisture_line_text_changed"]
[connection signal="text_changed" from="Panel/VBoxContainer/Panel/VBoxContainer/PHLine" to="." method="_on_ph_line_text_changed"]
[connection signal="text_changed" from="Panel/VBoxContainer/Panel/VBoxContainer/TemperatureLine" to="." method="_on_temperature_line_text_changed"]
[connection signal="text_changed" from="Panel/VBoxContainer/Panel/VBoxContainer/SunlightLine" to="." method="_on_sunlight_line_text_changed"]
[connection signal="text_changed" from="Panel/VBoxContainer/Panel/VBoxContainer/HumidityLine" to="." method="_on_humidity_line_text_changed"]
[connection signal="pressed" from="Panel/VBoxContainer/Panel/VBoxContainer/SubmitButton" to="." method="_on_submit_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Panel/BackButton" to="." method="_on_back_button_pressed"]
